objects/CSV_Flow_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSV_Column_Name__c</fullName>
        <label>CSV Column Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSV_Flow_Input_Format__c</fullName>
        <label>CSV Flow Input Format</label>
        <referenceTo>CSV_Flow_Input_Format__mdt</referenceTo>
        <relationshipLabel>CSV Flow Mappings</relationshipLabel>
        <relationshipName>CSV_Flow_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CSV_Flow_Setting__c</fullName>
        <label>CSV Flow Setting</label>
        <referenceTo>CSV_Flow_Setting__mdt</referenceTo>
        <relationshipLabel>CSV Flow Mappings</relationshipLabel>
        <relationshipName>CSV_Flow_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <description>Default value when blank or no data in CSV column.</description>
        <label>Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disregard_Blank_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do not pass the blank value from CSV as the Flow input variable</description>
        <inlineHelpText>Do not pass the blank value from CSV as the Flow input variable</inlineHelpText>
        <label>Disregard Blank Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Input_Name__c</fullName>
        <label>Flow Input Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The input CSV value does not contain any leading or trailing white space characters.</description>
        <inlineHelpText>The input CSV value does not contain any leading or trailing white space characters.</inlineHelpText>
        <label>Trim Value</label>
        <type>Checkbox</type>
    </fields>
    <label>CSV Flow Mapping</label>
    <pluralLabel>CSV Flow Mappings</pluralLabel>
</CustomObject>